Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,4 @@ steps:
     monitorOnBuild: true
     failOnIssues: true
     projectName: 'cdcalc'
-    organization: 'cdcalc'
+    organization: 'orjan'
