Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,4 @@ steps:
     failOnIssues: true
     projectName: 'cdcalc'
     organization: 'orjan'
+    additionalArguments: '--all-sub-projects'
